[gd_scene load_steps=3 format=3 uid="uid://cptbi1wmj4q8r"]

[ext_resource type="Theme" uid="uid://cspbh3wsg5xg6" path="res://scenes/themes/gui_theme.tres" id="1_a5tir"]
[ext_resource type="Script" path="res://scripts/gui/game_over.gd" id="1_pl8vv"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_a5tir")
script = ExtResource("1_pl8vv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_top = 106.0
offset_right = 896.0
offset_bottom = 106.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 128

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "game over"
horizontal_alignment = 1

[node name="ScoreContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ScorePrefix" type="Label" parent="MarginContainer/VBoxContainer/ScoreContainer"]
layout_mode = 2
text = "score:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/ScoreContainer"]
layout_mode = 2
text = "0"
vertical_alignment = 1

[node name="RestartButtonContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer/RestartButtonContainer"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.0
text = "restart"
